java 8; refactor; bold labels; exit if can't connect